--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.10",
     "@preact/signals-react": "^3.6.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "formik": "^2.4.9",
+    "lodash": "^4.17.21",
     "motion": "^12.23.25",
     "next": "16.0.7",
     "react": "19.2.0",
